Add installer and updater automation

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,9 @@ SLIDESHOW_MANAGER_ALLOWED_HOSTS=localhost,127.0.0.1
 
 # Secret for encrypting session payloads (optional fallback)
 NEXTAUTH_SECRET=replace-with-strong-secret
+
+# Repository identifier (owner/repo) used for installer and updater automation
+SLIDESHOW_MANAGER_REPO=owner/Slideshow_Manager
+
+# Optional GitHub token for accessing private repositories
+# SLIDESHOW_MANAGER_REPO_TOKEN=ghp_xxx
